# user-lab-day-2024

./: .gitmodules  CMakeLists.txt  README.md  launch_wrapper  nccl.html  nccl.md  run.sh
cmake/: Marp.cmake
nccl/: CMakeLists.txt  nccl.md
nccl/code/: FindNCCL.cmake  nccl_test.cpp  utility.hpp
nccl/uenv-recipe/: environments.yaml
src/: CMakeLists.txt
uenv-recipe/: config.yaml
